--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
    </head>
 
    <body>
-	   <form id="example_form" method="post">
+	   <form id="example_form" method="post" onsubmit="checkInput()">
 		    <div>
 		        <label for="name">First:</label>
 		        <input type="text" id="input1" name="input_first">
@@ -21,11 +21,10 @@
 		        <label for="msg">Third:</label>
 		        <input type="text" id="input3" name="input_third">
 		    </div>
-		    <div>
-			    <input type="button" value="Submit" onclick="checkInput()"/>		    	
-		    </div>
 		</form>
-		<script src = "auto-complete.min.js" type = "text/javascript"></script>
+	   <button type="submit" form="example_form" value="Submit">Submit</button>
+		
+	   <script src = "auto-complete.min.js" type = "text/javascript"></script>
 		<script type="text/javascript">
 			var list = ['One', 'Two', 'Three', 'Four', 'Five'];
 			var selected = false;
@@ -57,21 +56,23 @@
 			});
 
 			function checkInput() {
-		    	var input1_text = document.getElementById("input1").value;
-		    	var input2_text = document.getElementById("input2").value;
-		    	var input3_text = document.getElementById("input3").value;
-		    	if(input1_text == '' || input3_text == '' || input2_text == '') {
-		            	alert("Please fill all the fields");
-		    	} else {
-		        	if (list.indexOf(input1_text > -1) && selected) {
-		            	// Trigger the form submission here
-		            	document.getElementById("example_form").submit();
-		            	alert("Submited successflly");		            	
-		        	} else {
-		            	alert("Please select input from the drop down");
-		        	}		    		
-		    	} 
-		    }
+				var input1_text = document.getElementById("input1").value;
+				var input2_text = document.getElementById("input2").value;
+				var input3_text = document.getElementById("input3").value;
+				if(input1_text == '' || input3_text == '' || input2_text == '') {
+					alert("Please fill all the fields");
+					return false;
+				} else {
+					if (list.indexOf(input1_text > -1) && selected) {
+					// Trigger the form submission her
+						alert("Submited successflly");		            	
+						return true;
+					} else {
+						alert("Please select input from the drop down");
+						return false;
+					}		    		
+				} 
+			}
 		</script>
 	</body>
 </html>
